[package]
name = "genetic-rs"
description = "A small crate for quickstarting genetic algorithm projects"
version = "0.3.0"
edition = "2021"
authors = ["Inflectrix"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/inflectrix/genetic-rs"
repository = "https://github.com/inflectrix/genetic-rs"
keywords = ["genetic", "algorithm", "rust"]
categories = ["algorithms", "science", "simulation"]

[features]
default = ["builtin", "genrand"]
builtin = []
crossover = ["builtin"]
speciation = ["crossover"]
genrand = []
rayon = ["dep:rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replace_with = "0.1.7"
rand = "0.8.5"
rayon = { version = "1.8.0", optional = true }

[[example]]
name = "crossover"
required-features = ["crossover"]

[[example]]
name = "speciation"
required-features = ["speciation"]