[workspace]
members = ["genetic-rs", "genetic-rs-common", "genetic-rs-macros"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["HyperCodec"]
homepage = "https://github.com/hypercodec/genetic-rs"
repository = "https://github.com/hypercodec/genetic-rs"
license = "MIT"
edition = "2021"
