[workspace]
members = ["genetic-rs", "genetic-rs-common", "genetic-rs-macros"]
resolver = "2"

[workspace.package]
version = "1.4.0"
authors = ["HyperCodec"]
homepage = "https://github.com/hypercodec/genetic-rs"
repository = "https://github.com/hypercodec/genetic-rs"
license = "MIT"
edition = "2021"

[workspace.dependencies]
genetic-rs-common = { path = "genetic-rs-common", version = "1.4.0", default-features = false }
genetic-rs-macros = { path = "genetic-rs-macros", version = "1.4.0" }
