[package]
name = "genetic-rs-common"
description = "Commonly-used parts of genetic-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true
keywords = ["genetic", "algorithm", "rust"]
categories = ["algorithms", "science", "simulation"]

[features]
default = ["builtin", "genrand", "crossover"]
builtin = []
crossover = ["builtin"]
speciation = ["crossover"]
genrand = []
rayon = ["dep:rayon"]
tracing = ["dep:tracing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["crossover", "speciation"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
replace_with = "0.1.7"
rand = "0.9.0"
rayon = { version = "1.10.0", optional = true }
tracing = { version = "0.1.41", optional = true }