[package]
name = "genetic-rs-common"
description = "Commonly-used parts of genetic-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true
keywords = ["genetic", "algorithm", "rust"]
categories = ["algorithms", "science", "simulation"]

[features]
default = ["builtin", "genrand", "crossover", "knockout", "speciation"]
builtin = ["dep:rand", "dep:itertools"]
crossover = ["builtin"]
speciation = ["crossover"]
knockout = ["builtin"]
genrand = ["dep:rand"]
rayon = ["dep:rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["crossover", "speciation"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
itertools = { version = "0.14.0", optional = true }
rand = { version = "0.10.0", optional = true }
rayon = { version = "1.11.0", optional = true }
