[package]
name = "genetic-rs-macros"
description = "Macros for genetic-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["genetic", "algorithm", "rust"]
categories = ["algorithms", "science", "simulation"]


[lib]
proc-macro = true

[features]
default = ["genrand", "crossover"]
crossover = ["genetic-rs-common/crossover"]
genrand = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genetic-rs-common = { path = "../genetic-rs-common", version = "0.5.3" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.51"
