[package]
name = "genetic-rs-macros"
description = "Macros for genetic-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["genetic", "algorithm", "rust"]
categories = ["algorithms", "science", "simulation"]


[lib]
proc-macro = true

[features]
default = ["genrand", "crossover"]
crossover = ["genetic-rs-common/crossover"]
genrand = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.23.0"
genetic-rs-common = { path = "../genetic-rs-common", version = "1.2.0" }
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.114"
