[package]
name = "genetic-rs"
description = "A small crate for quickstarting genetic algorithm projects"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true
keywords = ["genetic", "algorithm", "rust"]
categories = ["algorithms", "science", "simulation"]

[features]
default = ["builtin", "genrand", "crossover"]
builtin = ["genetic-rs-common/builtin"]
crossover = ["builtin", "genetic-rs-common/crossover", "genetic-rs-macros/crossover"]
speciation = ["crossover", "genetic-rs-common/speciation"]
genrand = ["genetic-rs-common/genrand"]
rayon = ["genetic-rs-common/rayon"]
derive = ["dep:genetic-rs-macros", "genetic-rs-common/builtin"]
tracing = ["genetic-rs-common/tracing"]

[dependencies]
genetic-rs-common = { path = "../genetic-rs-common", version = "1.0.0" }
genetic-rs-macros = { path = "../genetic-rs-macros", version = "1.0.0", optional = true }

[lints.rust]
unexpected-cfgs = {level = "allow", check-cfg = ["cfg(publish)"]}

[dev-dependencies]
rand = "0.9.2"

[[example]]
name = "crossover"
required-features = ["crossover"]

[[example]]
name = "speciation"
required-features = ["speciation"]

[[example]]
name = "derive"
required-features = ["derive"]
