[package]
name = "genetic-rs"
description = "A small framework for managing genetic algorithms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
homepage.workspace = true
repository.workspace = true
keywords = ["genetic", "algorithm", "rust"]
categories = ["algorithms", "science", "simulation"]

[features]
default = ["builtin", "genrand", "crossover", "knockout", "speciation"]
builtin = ["genetic-rs-common/builtin"]
crossover = ["builtin", "genetic-rs-common/crossover", "genetic-rs-macros/crossover"]
speciation = ["crossover", "genetic-rs-common/speciation"]
knockout = ["builtin", "genetic-rs-common/knockout"]
genrand = ["genetic-rs-common/genrand"]
rayon = ["genetic-rs-common/rayon"]
derive = ["dep:genetic-rs-macros", "builtin"]

[dependencies]
genetic-rs-common.workspace = true
genetic-rs-macros = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(publish)", "cfg(docsrs)"] }

[dev-dependencies]
rand = "0.10.0"

[[example]]
name = "readme_ex"
required-features = ["builtin", "genrand"]

[[example]]
name = "crossover"
required-features = ["crossover", "genrand"]

[[example]]
name = "knockout"
required-features = ["knockout", "crossover", "genrand"]

[[example]]
name = "speciation"
required-features = ["speciation", "genrand"]

[[example]]
name = "derive"
required-features = ["derive"]

[[test]]
name = "simulation"
required-features = ["builtin", "genrand"]

[[test]]
name = "knockout"
required-features = ["knockout", "genrand"]

[[test]]
name = "repopulator"
required-features = ["crossover", "genrand"]

[[test]]
name = "speciation"
required-features = ["speciation", "genrand"]

[[test]]
name = "derive_macros"
required-features = ["derive", "genrand", "crossover"]
